<resources>
    <string name="app_name">Test</string>
    <string name="open_second_a_screen">open second <b><u>a</u></b> screen</string>
    <string name="open_second_b_screen">open second <b><u>b</u></b> screen</string>
    <string name="go_back">go back</string>
    <string name="send_message_next">send message next</string>
    <string name="send_message_back">send message back</string>
    <string name="go_main">go main</string>
    <string name="second_a_screen">Second A screen</string>
    <string name="second_b_screen">Second B screen</string>
    <string name="third_screen">Third screen</string>
    <string name="main_screen">Main screen</string>
    <string name="opened_screen">Screen opened from %1$s</string>
</resources>