<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.alexeyyuditsky.test.SecondAFragment">

    <TextView
        android:id="@+id/nameScreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Second A screen" />

    <Button
        android:id="@+id/goBackScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back" />

    <Button
        android:id="@+id/sendMessageNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message_next" />

    <Button
        android:id="@+id/sendMessageBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message_back" />

</LinearLayout>